--- a/app/views/products/merupay_transferpast.html.haml
+++ b/app/views/products/merupay_transferpast.html.haml
@@ -16,7 +16,7 @@
             振込申請履歴はありません
         .foot
           = link_to "", class: "foot__left" do
-            = icon('fas', 'angle-left', class: 'foot__left----text')
+            = icon('fas', 'angle-left', class: 'foot__left--text')
           = link_to "", class: "foot__right" do
             = icon('fas', 'angle-right', class: 'foot__right--icon')
 = render 'banner'  # 全体のバナーの部分テンプレートの呼び出し
