--- a/app/assets/stylesheets/merupay.scss
+++ b/app/assets/stylesheets/merupay.scss
@@ -5,10 +5,11 @@
 
 .merupay1{
   font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  width: 700px;
   &__title{
     padding: 8px 24px;
     border-bottom: 2px solid #f5f5f5;
-    height: 34px;
+    height: 50px;
     line-height: 34px;
     font-size: 24px;
     color: #333333;
@@ -19,6 +20,8 @@
   &__item1{
     margin-bottom: 48px;
     &__list{
+      display: block;
+      min-height: 48px;
       position: relative;
       background-color: #ffffff;
       font-size: 14px;
@@ -26,10 +29,16 @@
       color: #333333;
       border-bottom: 1px solid #f5f5f5;
       padding: 14px;
+      &:hover{
+        background-color: #eee;
+      }
       &__icon{
         color: #888;
         position: absolute;
         right: 16px;
+        &:hover{
+          @include icon-hover;
+        }
       }
       &--price{
         position: absolute;
@@ -42,16 +51,24 @@
     &__list{
       position: relative;
       background-color: #ffffff;
+      display: block;
+      min-height: 48px;
       font-size: 14px;
       font-weight: 400;
       color: #333333;
       font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
       border-bottom: 1px solid #f5f5f5;
       padding: 14px;
+      &:hover{
+        background-color: #eee;
+      }
       &__icon{
         color: #888;
         position: absolute;
         right: 16px;
+        &:hover{
+          @include icon-hover;
+        }
       }
     }
   }
