--- a/app/assets/stylesheets/merupay_transfer.scss
+++ b/app/assets/stylesheets/merupay_transfer.scss
@@ -5,7 +5,6 @@
     background-color: #ffffff;
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     padding: 64px;
-    color: #333333;
     &__item{
       margin: 0 auto;
       width: 320px;
@@ -15,16 +14,21 @@
         font-weight: 700;
         height: 22px;
         line-height: 22px;
-        display: inline-block;
         position: relative;
         &--edit{
           position: absolute;
           top: 0;
           right: 0;
-          color: #0099e8;
           font-size: 14px;
           font-weight: 400;
+          &:hover{
+            text-decoration: underline;
+          }
         }
+        a {
+          color: #0099e8;
+        }
+        
       }
       &__body{
         border-bottom: 1px solid #ccc;
