--- a/app/views/products/_user_sidebar.html.haml
+++ b/app/views/products/_user_sidebar.html.haml
@@ -47,10 +47,10 @@
   .merupay-heading
     フリペイ
   .merupay-ul
-    = link_to "", class: "merupay-ul__list" do
+    = link_to merupay_products_path, class: "merupay-ul__list" do
       売上・振込申請
       = icon('fas', 'angle-right', class: 'merupay-ul__list__icon')
-    = link_to "", class: "mypage-ul__list" do
+    = link_to merupay1_products_path, class: "mypage-ul__list" do
       ポイント
       = icon('fas', 'angle-right', class: 'merupay-ul__list__icon')
   .setting-heading
