--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,4 +51,10 @@
 @import "./merupay_transferpast";
 @import "./merupay1_expiration_date";
 @import "./merupay_receive_cash";
+@import "user_callnumber";
+@import "user_change_address";
+@import "user_mail_password";
+@import "user_newslist";
+
+
 
