--- a/app/views/products/merupay_receive_cash.html.haml
+++ b/app/views/products/merupay_receive_cash.html.haml
@@ -3,7 +3,7 @@
 // angle-downの調整だけする
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  - breadcrumb :user_page
+  - breadcrumb :merupay_receive_cash
   = render "layouts/breadcrumbs"
   .u-container
     .container-center
