--- a/app/views/products/merupay_sellpast.html.haml
+++ b/app/views/products/merupay_sellpast.html.haml
@@ -1,9 +1,8 @@
-
 -# メルペイの売上振込申請の売上履歴のページです
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  - breadcrumb :user_page
+  - breadcrumb :merupay_sellpast
   = render "layouts/breadcrumbs"
   .u-container
     .container-center
