--- a/app/views/products/merupay_transfer.html.haml
+++ b/app/views/products/merupay_transfer.html.haml
@@ -1,7 +1,7 @@
 // メルペイの振込申請して現金を受け取るページ
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  - breadcrumb :user_page
+  - breadcrumb :merupay_transfer
   = render "layouts/breadcrumbs"
   .u-container
     .container-center
