--- a/app/views/products/merupay_transferpast.html.haml
+++ b/app/views/products/merupay_transferpast.html.haml
@@ -2,7 +2,7 @@
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  - breadcrumb :user_page
+  - breadcrumb :merupay_transferpast
   = render "layouts/breadcrumbs"
   .u-container
     .container-center
