--- a/app/views/products/merupay_selldeadline.html.haml
+++ b/app/views/products/merupay_selldeadline.html.haml
@@ -3,7 +3,7 @@
 
 = render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
 .u-main
-  - breadcrumb :user_page
+  - breadcrumb :merupay_selldeadline
   = render "layouts/breadcrumbs"
   .u-container
     .container-center
